add missing hook in sf5.2

--- a/symfony/5.2-apache/000-default.conf
+++ b/symfony/5.2-apache/000-default.conf
@@ -9,8 +9,8 @@
         Allow from All
     </Directory>
 
-    SetEnv APP_ENV dev
-    SetEnv APP_DEBUG 1
+    SetEnv APP_ENV prod
+    SetEnv APP_DEBUG 0
 
     # uncomment the following lines if you install assets as symlinks
     # or run into problems when compiling LESS/Sass/CoffeeScript assets
