provide entrypoint hooks

--- a/drupal/8.9-apache/Dockerfile
+++ b/drupal/8.9-apache/Dockerfile
@@ -2,3 +2,9 @@ FROM drupal:8.9-apache
 
 LABEL vendor="Artifakt" \
       author="djalal@artifakt.io"
+
+# hadolint ignore=DL3045
+COPY docker-entrypoint.sh /usr/local/bin/
+
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+CMD ["apache2-foreground"]
