--- a/symfony/4.4-apache/000-default.conf
+++ b/symfony/4.4-apache/000-default.conf
@@ -9,6 +9,9 @@
         Allow from All
     </Directory>
 
+    SetEnv APP_ENV prod
+    SetEnv APP_DEBUG 0
+
     # uncomment the following lines if you install assets as symlinks
     # or run into problems when compiling LESS/Sass/CoffeeScript assets
     # <Directory /var/www/project>
