--- a/symfony/4.4-apache/Dockerfile
+++ b/symfony/4.4-apache/Dockerfile
@@ -1,12 +1,24 @@
 FROM registry.artifakt.io/php:7.4-apache
 
-# hadolint ignore=DL3022
-COPY --from=composer /usr/bin/composer /usr/bin/composer
+LABEL vendor="Artifakt" \
+      author="djalal@artifakt.io"
 
-RUN composer create-project symfony/website-skeleton:"^4.4" .
+HEALTHCHECK CMD curl --fail http://localhost/index.php || exit 1
 
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
+USER www-data
+RUN composer create-project symfony/website-skeleton:"^5.2" /tmp/website-skeleton && \
+    rm -rf /var/www/html/{.[!.],}* && \
+    mv /tmp/website-skeleton/{.[!.],}* /var/www/html
+WORKDIR /var/www/html
 RUN composer require symfony/apache-pack
 
-COPY 000-default.conf /etc/apache2/sites-enabled/000-default.conf
+# hadolint ignore=DL3002
+USER root
 
-RUN chown -R www-data:www-data .
+COPY 000-default.conf /etc/apache2/sites-enabled/000-default.conf
+# hadolint ignore=DL3045
+COPY docker-entrypoint.sh /usr/local/bin/
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+CMD ["apache2-foreground"]
