--- a/wordpress/5-apache/Dockerfile
+++ b/wordpress/5-apache/Dockerfile
@@ -1,7 +1,12 @@
 FROM wordpress:5-apache
 
 LABEL vendor="Artifakt" \
-      author="djalal@artifakt.io"
+      author="djalal@artifakt.io" \
+      stage="alpha"
+
+RUN echo 'SetEnv ${HTTPS}' > /etc/apache2/conf-enabled/force-ssl.conf 
+
+SetEnv HTTPS ${HTTPS}
 
 # hadolint ignore=DL3045
 COPY docker-entrypoint.sh /usr/local/bin/
