force ssl for wp (#33)
* force ssl for wp

wordpress needs a specific conf to enable SSL links

* clean

* making hadolint happy

--- a/wordpress/5-apache/Dockerfile
+++ b/wordpress/5-apache/Dockerfile
@@ -1,7 +1,11 @@
 FROM wordpress:5-apache
 
 LABEL vendor="Artifakt" \
-      author="djalal@artifakt.io"
+      author="djalal@artifakt.io" \
+      stage="alpha"
+
+# hadolint ignore=SC2016
+RUN echo 'SetEnv ${HTTPS}' > /etc/apache2/conf-enabled/force-ssl.conf 
 
 # hadolint ignore=DL3045
 COPY docker-entrypoint.sh /usr/local/bin/
