fix missing syntax

--- a/wordpress/5-apache/Dockerfile
+++ b/wordpress/5-apache/Dockerfile
@@ -5,7 +5,7 @@ LABEL vendor="Artifakt" \
       stage="alpha"
 
 # hadolint ignore=SC2016
-RUN echo 'SetEnv ${HTTPS}' > /etc/apache2/conf-enabled/force-ssl.conf 
+RUN echo 'SetEnv HTTPS ${HTTPS}' > /etc/apache2/conf-enabled/force-ssl.conf 
 
 # hadolint ignore=DL3045
 COPY docker-entrypoint.sh /usr/local/bin/
