add sed on build time

--- a/magento/2.4-apache/Dockerfile
+++ b/magento/2.4-apache/Dockerfile
@@ -3,7 +3,8 @@ ARG PHP_VERSION=7.4-apache
 FROM php:${PHP_VERSION}
 
 LABEL vendor="Artifakt" \
-      author="djalal@artifakt.io"
+      author="djalal@artifakt.io" \
+      stage="alpha"
 
 ARG MYSQL_HOST
 ARG MYSQL_ROOT_PASSWORD
@@ -165,8 +166,10 @@ RUN docker-php-ext-enable \
   zip \
   pcntl
 
-# hadolint ignore=DL3022
-COPY --from=composer:1.10 /usr/bin/composer /usr/bin/composer
+ARG COMPOSER_VERSION=2.0.13
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+RUN curl -sS https://getcomposer.org/installer | \
+  php -- --version=${COMPOSER_VERSION} --install-dir=/usr/local/bin --filename=composer
 
 # hadolint ignore=DL3022
 COPY --from=mysql:8 /usr/bin/my* /usr/bin/
@@ -176,6 +179,10 @@ COPY etc/mail.ini /usr/local/etc/php/conf.d/zz-mail.ini
 COPY etc/crontab /etc/cron.d/magento2-cron
 COPY etc/000-default.conf /usr/apache2/sites-available/000-default.conf
 RUN a2enmod rewrite && a2ensite 000-default
+
+# Substitute in php.ini values
+RUN [ -n "${PHP_MEMORY_LIMIT}" ] && sed -i "s/_PHP_MEMORY_LIMIT_/${PHP_MEMORY_LIMIT}/" /usr/local/etc/php/conf.d/magento.ini
+RUN [ -n "${UPLOAD_MAX_FILESIZE}" ] && sed -i "s/_UPLOAD_MAX_FILESIZE_/${UPLOAD_MAX_FILESIZE}/" /usr/local/etc/php/conf.d/magento.ini
 
 HEALTHCHECK CMD curl --fail http://localhost/index.php || exit 1
 
