--- a/magento/2.4-apache/etc/magento.ini
+++ b/magento/2.4-apache/etc/magento.ini
@@ -3,5 +3,5 @@ opcache.enable = 1
 date.timezone = Europe/Paris
 realpath_cache_ttl = 7200
 realpath_cache_size = 10M
-upload_max_filesize = _UPLOAD_MAX_FILESIZE_
-php_value post_max_size = _UPLOAD_MAX_FILESIZE_
+upload_max_filesize = _UPLOAD_MAX_FILESIZE_ ; Variable: UPLOAD_MAX_FILESIZE
+post_max_size = _UPLOAD_MAX_FILESIZE_ ; Variable: UPLOAD_MAX_FILESIZE
