fix magento2 build and run (#35)
* fix ini file format

* add sed on build time

* fix ini syntax

* comment out tricky sed part

--- a/magento/2.4-apache/etc/magento.ini
+++ b/magento/2.4-apache/etc/magento.ini
@@ -1,5 +1,7 @@
-memory_limit = !PHP_MEMORY_LIMIT! ; Variable: PHP_MEMORY_LIMIT
+memory_limit = _PHP_MEMORY_LIMIT_ ; Variable: PHP_MEMORY_LIMIT
 opcache.enable = 1
 date.timezone = Europe/Paris
 realpath_cache_ttl = 7200
 realpath_cache_size = 10M
+upload_max_filesize = _UPLOAD_MAX_FILESIZE_ ; Variable: UPLOAD_MAX_FILESIZE
+post_max_size = _UPLOAD_MAX_FILESIZE_ ; Variable: UPLOAD_MAX_FILESIZE
