--- a/symfony/4.4-apache/000-default.conf
+++ b/symfony/4.4-apache/000-default.conf
@@ -4,13 +4,16 @@
 
     DocumentRoot /var/www/html/public
     <Directory /var/www/html/public>
+        Require all granted
         AllowOverride All
         Order Allow,Deny
         Allow from All
+
+        FallbackResource /index.php
     </Directory>
 
-    SetEnv APP_ENV prod
-    SetEnv APP_DEBUG 0
+    SetEnv APP_ENV ${APP_ENV}
+    SetEnv APP_DEBUG ${APP_DEBUG}
 
     # uncomment the following lines if you install assets as symlinks
     # or run into problems when compiling LESS/Sass/CoffeeScript assets
