--- a/akeneo/4-apache/.env.local
+++ b/akeneo/4-apache/.env.local
@@ -6,3 +6,7 @@ ARTIFAKT_MYSQL_PORT=3306
 ARTIFAKT_MYSQL_DATABASE_NAME=akeneo4_pim
 ARTIFAKT_MYSQL_USER=akeneo4_pim
 ARTIFAKT_MYSQL_PASSWORD=akeneo4_pim
+
+APP_DATABASE_NAME=akeneo4_pim
+APP_DATABASE_USER=akeneo4_pim
+APP_DATABASE_PASSWORD=akeneo4_pim
