--- a/node/12/Dockerfile
+++ b/node/12/Dockerfile
@@ -2,3 +2,8 @@ FROM node:erbium
 
 LABEL vendor="Artifakt" \
       author="djalal@artifakt.io"
+
+# hadolint ignore=DL3045
+COPY docker-entrypoint.sh /usr/local/bin/
+
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
