--- a/node/12/Dockerfile
+++ b/node/12/Dockerfile
@@ -7,3 +7,4 @@ LABEL vendor="Artifakt" \
 COPY docker-entrypoint.sh /usr/local/bin/
 
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+CMD [ "npm", "start" ]
