java8 feature list

--- a/java/8/Dockerfile
+++ b/java/8/Dockerfile
@@ -1,4 +1,11 @@
 FROM openjdk:8-jre-buster
 
 LABEL vendor="Artifakt" \
-      author="djalal@artifakt.io"
+      author="djalal@artifakt.io" \
+      label="alpha"
+
+
+# hadolint ignore=DL3045
+COPY docker-entrypoint.sh /usr/local/bin/
+
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
