Add node entrypoint (#48)
* (wip) introduce new entrypoint for node

* chmod +x

* npm start by default

--- a/node/12/Dockerfile
+++ b/node/12/Dockerfile
@@ -2,3 +2,9 @@ FROM node:erbium
 
 LABEL vendor="Artifakt" \
       author="djalal@artifakt.io"
+
+# hadolint ignore=DL3045
+COPY docker-entrypoint.sh /usr/local/bin/
+
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+CMD [ "npm", "start" ]
