explicit expose by default

--- a/python/3.9/Dockerfile
+++ b/python/3.9/Dockerfile
@@ -6,5 +6,7 @@ LABEL vendor="Artifakt" \
 # hadolint ignore=DL3045
 COPY docker-entrypoint.sh /usr/local/bin/
 
+EXPOSE 80
+
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 CMD [ "python" ]
