minimal patch to pass global test

--- a/drupal/8.9-apache/Dockerfile
+++ b/drupal/8.9-apache/Dockerfile
@@ -6,6 +6,8 @@ LABEL vendor="Artifakt" \
 
 COPY --chown=www-data:www-data default.settings.php /opt/settings.php
 
+WORKDIR /var/www/html
+
 # hadolint ignore=DL3045
 COPY docker-entrypoint.sh /usr/local/bin/
 
