--- a/node/12/Dockerfile
+++ b/node/12/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:erbium
 
 LABEL vendor="Artifakt" \
-      author="djalal@artifakt.io"
+      author="djalal@artifakt.io" \
+      stage="alpha"
 
 # hadolint ignore=DL3045
 COPY docker-entrypoint.sh /usr/local/bin/
