--- a/python/3.9/Dockerfile
+++ b/python/3.9/Dockerfile
@@ -1,12 +1,11 @@
 FROM python:3.9
 
 LABEL vendor="Artifakt" \
-      author="djalal@artifakt.io"
+      author="djalal@artifakt.io" \
+      release="alpha"
 
 # hadolint ignore=DL3045
 COPY docker-entrypoint.sh /usr/local/bin/
-
-EXPOSE 80
 
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 CMD [ "python" ]
