--- a/java/8/Dockerfile
+++ b/java/8/Dockerfile
@@ -2,8 +2,7 @@ FROM openjdk:8-jre-buster
 
 LABEL vendor="Artifakt" \
       author="djalal@artifakt.io" \
-      label="alpha"
-
+      stage="alpha"
 
 # hadolint ignore=DL3045
 COPY docker-entrypoint.sh /usr/local/bin/
