--- a/python/3.9/Dockerfile
+++ b/python/3.9/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.9
 
 LABEL vendor="Artifakt" \
       author="djalal@artifakt.io" \
-      release="alpha"
+      stage="alpha"
 
 # hadolint ignore=DL3045
 COPY docker-entrypoint.sh /usr/local/bin/
