--- a/php/7.3-fpm/Dockerfile
+++ b/php/7.3-fpm/Dockerfile
@@ -102,3 +102,9 @@ RUN curl -sS https://getcomposer.org/installer | \
 
 # finally, make sure all mods and extensions are enabled
 RUN docker-php-ext-enable $PHP_EXTENSION_LIST
+
+# hadolint ignore=DL3045
+COPY docker-entrypoint.sh /usr/local/bin/
+
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+CMD ["apache2-foreground"]
