minimal patch to pass global test (#53)
* minimal patch to pass global test

* fix typo

* fix typo

* add missing file

* add missing entrypoints

* add missing entrypoint

--- a/php/7.4-fpm/Dockerfile
+++ b/php/7.4-fpm/Dockerfile
@@ -1,7 +1,8 @@
 FROM php:7.4-apache
 
 LABEL vendor="Artifakt" \
-      author="djalal@artifakt.io"
+      author="djalal@artifakt.io" \
+      stage="alpha"
 
 HEALTHCHECK CMD curl --fail http://localhost || exit 1
 
@@ -108,3 +109,9 @@ RUN curl -sS https://getcomposer.org/installer | \
 
 # finally, make sure all mods and extensions are enabled
 RUN docker-php-ext-enable $PHP_EXTENSION_LIST
+
+# hadolint ignore=DL3045
+COPY docker-entrypoint.sh /usr/local/bin/
+
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+CMD ["apache2-foreground"]
