--- a/php/8-fpm/Dockerfile
+++ b/php/8-fpm/Dockerfile
@@ -1,7 +1,8 @@
 FROM php:8-fpm
 
-LABEL vendor="Artifakt.com" \
-      author="djalal@artifakt.com"
+LABEL vendor="Artifakt" \
+      author="djalal@artifakt.io" \
+      stage="alpha"
 
 HEALTHCHECK CMD curl --fail http://localhost || exit 1
 
@@ -108,3 +109,9 @@ RUN rm -f /usr/local/etc/php/conf.d/*sodium.ini \
 
 # finally, make sure all mods and extensions are enabled
 RUN docker-php-ext-enable $PHP_EXTENSION_LIST
+
+# hadolint ignore=DL3045
+COPY docker-entrypoint.sh /usr/local/bin/
+
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+CMD ["apache2-foreground"]
