fix missing arg

--- a/php/7.3-apache/Dockerfile
+++ b/php/7.3-apache/Dockerfile
@@ -15,6 +15,7 @@ ARG LIBSODIUM__REPO_TAG=1.0.18
 ARG MEMCACHE_VERSION=4.0.5.2
 
 ARG APCU_VERSION=5.1.19
+ARG LIBSODIUM_VERSION=2.0.23
 
 # Install dependencies
 # hadolint ignore=DL3008
