fix py Dockerfile

--- a/python/3.9/test.yaml
+++ b/python/3.9/test.yaml
@@ -4,4 +4,4 @@ metadataTest:
   volumes: []
   entrypoint: ["/usr/local/bin/docker-entrypoint.sh"]
   cmd: ["python"]
-  workdir: "/app"
+  workdir: "/var/www/html"
