add image tests in python (#62)
* add image tests in python

* add debug

* add debug

* test fix

* fix test

* fix py Dockerfile

* Update Dockerfile

--- a/python/3.9/Dockerfile
+++ b/python/3.9/Dockerfile
@@ -7,5 +7,7 @@ LABEL vendor="Artifakt" \
 # hadolint ignore=DL3045
 COPY docker-entrypoint.sh /usr/local/bin/
 
+WORKDIR /var/www/html
+
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 CMD [ "python" ]
