use php ini production defaults (#64)

--- a/php/7.3-apache/Dockerfile
+++ b/php/7.3-apache/Dockerfile
@@ -108,6 +108,10 @@ RUN curl -sS https://getcomposer.org/installer | \
 RUN docker-php-ext-enable $PHP_EXTENSION_LIST
 RUN a2enmod $APACHE_MODULE_LIST
 
+# Use the default production configuration
+RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
+COPY zzz-artifakt.ini $PHP_INI_DIR/conf.d/zzz-artifakt.ini
+
 # hadolint ignore=DL3045
 COPY docker-entrypoint.sh /usr/local/bin/
 
