--- a/akeneo/3.2-apache/Dockerfile
+++ b/akeneo/3.2-apache/Dockerfile
@@ -1,7 +1,7 @@
-FROM alpine:3
+FROM debian:buster-slim
 
 LABEL vendor="Artifakt" \
-      author="djalal@artifakt.io"
+      author="djalal@artifakt.io" \
+      stage="retired"
 
-RUN echo This runtime is retired, see https://docs.artifakt.com/
-
+RUN echo This runtime is now retired, see https://docs.artifakt.com/
