comply to global test

--- a/akeneo/3.2-apache/Dockerfile
+++ b/akeneo/3.2-apache/Dockerfile
@@ -5,3 +5,8 @@ LABEL vendor="Artifakt" \
       stage="retired"
 
 RUN echo This runtime is now retired, see https://docs.artifakt.com/
+
+COPY docker-entrypoint.sh /usr/local/bin/
+
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+CMD ["apache2-foreground"]
