akeneo3 must comply to global tests (#65)
* comply to global tests

* add missing custom entrypoint

* comply to global test

--- a/akeneo/3.2-apache/Dockerfile
+++ b/akeneo/3.2-apache/Dockerfile
@@ -1,7 +1,12 @@
-FROM alpine:3
+FROM debian:buster-slim
 
 LABEL vendor="Artifakt" \
-      author="djalal@artifakt.io"
+      author="djalal@artifakt.io" \
+      stage="retired"
 
-RUN echo This runtime is retired, see https://docs.artifakt.com/
+RUN echo This runtime is now retired, see https://docs.artifakt.com/
 
+COPY docker-entrypoint.sh /usr/local/bin/
+
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+CMD ["apache2-foreground"]
