fix nightly & patch upgrade for akeneo5 (#68)
* patch upgrade for akeneo5

* fix php ini file order

--- a/akeneo/5-apache/Dockerfile
+++ b/akeneo/5-apache/Dockerfile
@@ -5,7 +5,7 @@ LABEL vendor="Artifakt" \
       stage="alpha"
 
 # see release archives https://github.com/akeneo/pim-community-standard/releases
-ARG AKENEO_VERSION=5.0.30
+ARG AKENEO_VERSION=5.0.31
 
 # see https://docs.akeneo.com/5.0/install_pim/manual/system_requirements/system_requirements.html, already enabled: curl, mbstring, xml
 ARG PHP_EXTENSION_LIST="apcu bcmath exif gd imagick intl memcached mysqli opcache pdo_mysql zip"
@@ -150,7 +150,7 @@ USER root
 
 COPY wait-for-it.sh docker-entrypoint.sh /usr/local/bin/
 COPY akeneo.conf /etc/apache2/sites-available/000-default.conf
-COPY akeneo.ini /usr/local/etc/php/conf.d/
+COPY akeneo.ini /usr/local/etc/php/conf.d/zzzz-akeneo.ini
 
 ENV APP_DATABASE_HOST=${ARTIFAKT_MYSQL_HOST:-mysql}
 ENV APP_DATABASE_NAME=${ARTIFAKT_MYSQL_DATABASE_NAME:-dbname}
