--- a/magento/2.4-apache/etc/000-default.conf
+++ b/magento/2.4-apache/etc/000-default.conf
@@ -14,9 +14,9 @@
 	#ServerName www.example.com
 
 	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/html
+	DocumentRoot /var/www/html/pub
 
-	<Directory "/var/www/html">
+	<Directory "/var/www/html/pub">
 	  	Options Indexes FollowSymLinks MultiViews
  		 AllowOverride All
   		Order allow,deny
@@ -32,6 +32,8 @@
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+	SetEnv "HTTPS" "on"
 
 	# For most configuration files from conf-available/, which are
 	# enabled or disabled at a global level, it is possible to
