Copy wp-config.php in container

--- a/wordpress/5-apache/Dockerfile
+++ b/wordpress/5-apache/Dockerfile
@@ -20,6 +20,7 @@ RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli
     mv wp-cli.phar /usr/local/bin/wp
 
 # hadolint ignore=DL3045
+COPY etc/wp-config.php /.artifakt/
 COPY etc/app-entrypoint.sh /.artifakt/entrypoint.sh
 COPY docker-entrypoint.sh /usr/local/bin/
 
